Fixed wrong size of speaker picture in modal box.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -248,10 +248,6 @@ section.container, footer .container {
   padding-bottom: 9px;
 }
 
-.speaker {
-  min-height: 473px;
-}
-
 .modalLike {
   background: #e20031;
   padding: 15px 17px;
